Fix for background-attachment:fixed image scaling issue on Safari.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1307,13 +1307,9 @@ header .logo a {
 	background-attachment: fixed;
 	width: 100%;
 	height: 100%;
-	min-height: 720px;
 	display: table;
 	position: relative;
 	text-align: center;
-	-webkit-transform: translateY(0);
-	-ms-transform: translateY(0);
-	transform: translateY(0);
 }
 .intro-overlay {
 	position: absolute;
@@ -1322,7 +1318,7 @@ header .logo a {
 	width: 100%;
 	height: 100%;
 	background: #111111;
-	opacity: .65;
+	opacity: .5;
 }
 
 .intro-content {
@@ -1427,7 +1423,15 @@ header .logo a {
 .intro-social li a:hover, .intro-social li a:focus {
 	color: #cc005f;
 }
-
+/**
+* Fix for background-attachment: fixed background image sizing issue on Safari
+*/
+ @supports (-webkit-touch-callout: none) {
+    #intro {
+        background-size: auto 100vh;
+		background-attachment: scroll;
+    }
+}
 /**
  * responsive:
  * Intro
